--- a/login.html
+++ b/login.html
@@ -21,10 +21,10 @@
                     <img src="IMAGES/logo.png">
                 </div>
                 
-                <li><a href=" file:///C:/Users/yasha/Desktop/live%20after%20death/donor.html"> DONATE</a></li>
-                <li><a href=" file:///C:/Users/yasha/Desktop/live%20after%20death/pledge.html ">  PLEDGE YOUR ORGAN </a></li>
-                <li><a href=" file:///C:/Users/yasha/Desktop/live%20after%20death/receive.html ">  RECEIVE </a></li>
-                <li><a href=" file:///C:/Users/yasha/Desktop/live%20after%20death/contact.html ">  CONTACT US </a></li>
+                <li><a href="file:///C:/Users/HYAS1KOR/Documents/My%20Received%20Files/ExampleCode/donor.html "> DONATE</a></li>
+                <li><a href="file:///C:/Users/HYAS1KOR/Documents/My%20Received%20Files/ExampleCode/pledge.html ">  PLEDGE YOUR ORGAN </a></li>
+                <li><a href="file:///C:/Users/HYAS1KOR/Documents/My%20Received%20Files/ExampleCode/receive.html ">  RECEIVE </a></li>
+                <li><a href="file:///C:/Users/HYAS1KOR/Documents/My%20Received%20Files/ExampleCode/contact.html ">  CONTACT US </a></li>
 
             </ul>
         </nav>
